# nvr

./: .pylintrc  .style.yapf  LICENSE  README.md  setup.cfg
src/nvr/: __init__.py  cmd.py
