[metadata]
name = nvr-stonewell
version = 0.0.1
author = Jingnan Si
author_email = jingnan.si+eim@gmail.com
description = a nvim remote help tool in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stonewell/nvr
project_urls =
    Bug Tracker = https://github.com/stonewell/nvr/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console-scripts =
    nvr = nvr.frontend.cmd:main

[flake8]
ignore = E111, E501, E402, E114
max-line-length = 160
exclude = .git,__pycache__
max-complexity = 10
